If documents are closed, but they had no top most view, keep the view. Only if the active view vanished, replace it by the first document.

BUG: 321132